@@ -206,7 +206,9 @@ None.
     kernel does not, there is no way for Shorewall to determine that
     persistent SNAT isn't going to work. The kernel SNAT code blindly
     accepts all SNAT flags without verifying them and returns them to
-    iptables when asked.	
+    iptables when asked.
+
+2)  A 'clean' target has been added to the Makefiles.	
 
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   I N   4 . 4
