@@ -10,6 +10,8 @@ Changes in Shorewall 4.4.1
 
 5)  Minor performance improvements.
 
+6)  Add 'clean' target to Makefile.
+
 Changes in Shorewall 4.4.0
 
 1)  Fix 'compile ... -' so that it no longer requires '-v-1'
